--- a/src/app/components/multi-array/multi-array.component.html
+++ b/src/app/components/multi-array/multi-array.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <div *ngIf="skill.get('addressOption')?.value === 'yes'">
                         <input type="text" placeholder="address1" formControlName="addressone">&nbsp;&nbsp;
-                        <input type="text" placeholder="address2" formControlName="addresstwo">
+                        <input type="text" placeholder="address2" formControlName="addresstwo0000">
                     </div>
                 </div>
             </div>
