--- a/src/app/components/multi-array/multi-array.component.html
+++ b/src/app/components/multi-array/multi-array.component.html
@@ -10,7 +10,7 @@
                     <input type="text" formControlName="exp">
 
                     <div>
-                        <input type="radio" formControlName="addressOption" value="no">
+                        <input type="radio" formControlName="addressOptionnnnn" value="no">
                         <label for="html">Same address</label><br>
                         <input type="radio" formControlName="addressOption" value="yes">
                         <label for="css">Do you want to add another address</label><br>
