--- a/src/app/components/multi-array/multi-array.component.html
+++ b/src/app/components/multi-array/multi-array.component.html
@@ -25,6 +25,7 @@
 
         <p>
             <button type="submit">Submit</button>
+            <button>remove</button>
         </p>
     </form>
 </section>
