--- a/src/app/components/multi-array/multi-array.component.html
+++ b/src/app/components/multi-array/multi-array.component.html
@@ -25,7 +25,7 @@
 
         <p>
             <button type="submit">Submit</button>
-            <button>main remove</button>
+            <button>main remove new</button>
         </p>
     </form>
 </section>
